force-app/main/default/objects/HI_Open_Enrollment_Window__c/fields/Final_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Extension_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Extension Date</label>
    <type>Date</type>
</CustomField>