force-app/main/default/objects/HI_Open_Enrollment_Window__c/fields/Fulfillment_Id__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Id__c</fullName>
    <label>Fulfillment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>