force-app/main/default/objects/HI_Open_Enrollment_Window__c/fields/OE_Complete__c.field-meta.xml
<CustomField>
    <fullName>OE_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OE Complete</label>
    <type>Checkbox</type>
</CustomField>