force-app/main/default/objects/HI_Open_Enrollment_Window__c/fields/Window_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Window_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Window End Date</label>
    <type>Date</type>
</CustomField>