force-app/main/default/objects/HI_Open_Enrollment_Window__c/fields/Window_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Window_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Window Start Date</label>
    <type>Date</type>
</CustomField>